--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.13.2",
+    "@types/google.maps": "^3.47.3",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
