--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/google.maps": "^3.47.3",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-use": "^17.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
