--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.14.3",
@@ -15,11 +16,15 @@
     "react-use": "^17.4.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/google.maps": "^3.49.2",
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
-    "@types/google.maps": "^3.49.2",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "typescript": "4.7.3"
   }
 }
