--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.14.3",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "lodash": "^4.17.21",
+    "next": "12.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/google.maps": "^3.49.2",
-    "@types/node": "17.0.42",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "18.0.1",
     "@types/react": "18.0.12",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "typescript": "4.7.3"
