--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
+    "react-number-format": "^5.1.2",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0"
   },
