--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.1",
     "lodash": "^4.17.21",
     "next": "13.0.6",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
