--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-next": "13.1.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "typescript-plugin-css-modules": "^4.1.1"
   }
 }
