--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-number-format": "^5.1.3",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0"
@@ -33,6 +34,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
+    "@types/react-modal": "^3.13.1",
     "@types/react-redux": "^7.1.25",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
