--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.7.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.3",
     "lodash": "^4.17.21",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
     "react-number-format": "^5.3.1",
     "react-redux": "^9.0.4",
@@ -36,10 +42,12 @@
     "@types/react": "18.2.46",
     "@types/react-modal": "^3.16.3",
     "@types/react-redux": "^7.1.33",
+    "dotenv-cli": "^7.3.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "prisma": "^5.7.1",
     "typescript": "5.3.3",
     "typescript-plugin-css-modules": "^5.0.2"
   }
