Updated Prisma commands
It seems that migrate is outdated. Added generate and validate instead

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "prisma:migrate:local": "dotenv -e .env.local prisma migrate dev",
-    "prisma:push:local": "dotenv -e .env.local prisma db push"
+    "prisma:generate:local": "dotenv -e .env.local prisma generate", 
+    "prisma:validate:local": "dotenv -e .env.local prisma validate" 
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
