Added "check-errors" script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --dir .",
+    "check-errors": "tsc --noEmit",
     "test": "jest",
     "prisma:generate:local": "dotenv -e .env.local prisma generate", 
     "prisma:validate:local": "dotenv -e .env.local prisma validate" 
