--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint": "next lint --dir .",
     "check-types": "tsc --noEmit",
     "test": "jest",
-    "prisma:generate:local": "dotenv -e .env.local prisma generate", 
-    "prisma:validate:local": "dotenv -e .env.local prisma validate" 
+    "prisma:generate:local": "dotenv -e .env.local prisma generate",
+    "prisma:validate:local": "dotenv -e .env.local prisma validate"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
@@ -52,7 +52,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prisma": "^5.7.1",
-    "typescript": "5.3.3",
-    "typescript-plugin-css-modules": "^5.0.2"
+    "typescript": "5.3.3"
   }
 }
