--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "prisma:validate:local": "dotenv -e .env.local prisma validate"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.28",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.7.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "@turf/turf": "^6.5.0",
     "axios": "^1.6.3",
+    "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
+    "mongoose": "^7.0.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
@@ -34,9 +38,11 @@
     "react-modal": "^3.16.1",
     "react-number-format": "^5.3.1",
     "react-redux": "^9.0.4",
-    "react-use": "^17.4.2"
+    "react-use": "^17.4.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.0",
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@types/google.maps": "^3.54.10",
@@ -52,6 +58,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prisma": "^5.7.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "yargs": "17.7.2"
   }
 }
