--- a/env.local.example
+++ b/env.local.example
@@ -3,7 +3,7 @@ NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=""
 NEXT_PUBLIC_GOOGLE_MAPS_ID=""
 NEXT_PUBLIC_LOCALE="en-US"
 NEXT_PUBLIC_CURRENCY="USD"
-DATABASE_URL=""
+MONGODB_URI=""
 NEXTAUTH_URL="http://localhost:3000/"
 NEXTAUTH_SECRET=""
 GOOGLE_CLIENT_ID=""
