A very expensive refactor
Refactored script that generates listing data by extracting the part that does geocoding into a separate script. Ended up spending $268 in API calls while trying to figure out a good solution! Making a separate script will move the slow, expensive part of generating the data out one file that hopefully will not need to be re-generated much so we can re-generate the listing data as much as we want to refresh dates an other things.

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint --dir .",
     "check-types": "tsc --noEmit",
     "test": "jest",
+    "generate_listing_geocode_data": "bun run ./bin/generate_listing_geocode_data",
     "generate_listing_data": "bun run ./bin/generate_listing_data",
     "seed_listing_data": "bun run ./bin/seed_listing_data",
     "seed_boundary_data": "bun run ./bin/seed_boundary_data",
     "seed_dev_data": "bun run ./bin/seed_boundary_data && bun run ./bin/seed_listing_data",
-    "generate_and_seed_listing_data": "bun run ./bin/generate_listing_data && bun run ./bin/seed_listing_data",
+    "generate_and_seed_listing_data": "bun run ./bin/generate_listing_geocode_data && bun run ./bin/generate_listing_data && bun run ./bin/seed_listing_data",
     "prisma:generate:local": "dotenv -e .env.local prisma generate",
     "prisma:validate:local": "dotenv -e .env.local prisma validate"
   },
@@ -57,6 +58,7 @@
     "dotenv-cli": "^7.3.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "exponential-backoff": "^3.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prisma": "^5.7.1",
