--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-number-format": "^5.3.1",
     "react-redux": "^9.0.4",
     "react-use": "^17.4.2",
+    "slugify": "^1.6.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
